@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix player save file parser. Now usekeys and applymode settings are
+retained between logins.
+Andreas Kirschbaum 2009-07-10
+
 Fix some memory leaks when updating object->msg.
 Andreas Kirschbaum 2009-07-09
 
